testdev/static/css/custom.css
:root {
  --font-family-headings: "Quicksand", sans-serif;
  --font-family-body: "Work Sans", sans-serif;
  --font-family-monospace: "Roboto Mono", "Courier New", monospace;
  --font-size-1: clamp(2rem, 1.7993rem + 0.8451vw, 2.75rem);
  --font-size-2: clamp(1.8rem, 1.6261rem + 0.7324vw, 2.45rem);
  --font-size-3: clamp(1.6rem, 1.4662rem + 0.5634vw, 2.1rem);
  --font-size-4: clamp(1.4rem, 1.293rem + 0.4507vw, 1.8rem);
  --font-size-5: clamp(1.2rem, 1.1331rem + 0.2817vw, 1.45rem);
  --font-size-6: clamp(0.9rem, 0.8732rem + 0.1127vw, 1rem);
  --font-size-body: clamp(1rem, 0.9599rem + 0.169vw, 1.15rem);
  --menu-active-colour: antiquewhite;
}

/* ======= Scrolling ======= */
html {
  scroll-behavior: smooth;
  scroll-padding-top: 5rem;
}

article::before {
  content: '';
  display: block;
  height: 2rem;
}

.article-body {
  width:90%; 
  margin: 2rem auto
}

body {
  margin: 0;
  font-family: var(--font-family-body);
  font-size: var(--font-size-body);
  font-optical-sizing: auto;
  font-weight: 400;
  line-height: 1.5;
}

article {
  margin-top: 1rem;
}

.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-family-headings);
  margin-bottom: 0.8rem;
  font-weight: 500;
  line-height: 1.2;
}

.h1,
h1 {
  font-size: var(--font-size-1);
}

.h2,
h2 {
  font-size: var(--font-size-2);
  padding: 0.35rem 0;
}

.h3,
h3 {
  font-size: var(--font-size-3);
  padding: 0.25rem 0;
}

.h4,
h4 {
  font-size: var(--font-size-4);
  padding: 0.15rem 0;
}

.h5,
h5 {
  font-size: var(--font-size-5);
  padding: 0.125rem 0 !important;
}

.h6,
h6 {
  font-size: var(--font-size-6);
  padding: 0.1rem 0 !important;
}

.p,
p {
  font-size: var(--font-size-body);
  font-family: var(--font-family-body);
  text-align: justify;
}

.mt-n2 {
  margin-top: -0.5rem
}

code {
  font-family: var(--font-family-monospace);
  font-size: var(--font-size-6);
  text-align: left !important;
  background-color: rgb(28, 27, 27);
  color: ghostwhite;
  padding: 0.06rem 0.3rem;
  border-radius: 0.3rem;
  white-space: pre !important;
}

.bg-black {
  background-color: rgb(0, 0, 0) !important;
  color: white !important;
}

.bg-transparent,
.bg-light {
  color: black !important;
}

.bg-primary,
.bg-secondary,
.bg-success,
.bg-info,
.bg-warning,
.bg-danger,
.bg-dark {
  color: white !important;
}

.check-list-wrapper {
  list-style: none;
}

.check-list {
  margin-bottom: 0.1em;
}

.check-list::marker {
  content: '🗹';
  letter-spacing: 0.5em;
}

.code-block {
  font-size: var(--font-size-6);
  font-family: var(--font-family-monospace);
  color: floralwhite;
  background-color: #272822;
  padding: 0;
  text-align: left !important;
  line-height: 1.6;
}

.code-block-wrapper {
  background-color: #272822;
  padding: 0.8em 1em;
  margin-bottom: 0.8em;
  border-radius: 0.4em;
  list-style: none;
}

.quoteblock {
  font-size: var(--font-size-5);
  font-family: var(--font-family-headings);
  color: #272822;
  background-color: lightblue;
  padding: 0;
  text-align: left !important;
  line-height: 1.6;
}

.quoteblock-wrapper {
  border-inline-start: 0.5rem solid lightseagreen;
  background-color: lightblue;
  padding: 0.8em 1em;
  margin-bottom: 0.8em;
  border-radius: 0.4em;
  list-style: none;
}

.card-video {
  position: relative;
  overflow: hidden;
  padding-top: 56.25%; /* 16:9 acpect ration */
}

.card-video iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

